--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework 8</title>
+    <link rel="icon" href="data:," />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <ul class="gallery"></ul>
+    <script src="./js/gallery.js" type="module"></script>
 </body>
 </html>
